Button to pay an order

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,6 @@ gassman:
     bot:
       username: YOUR_USERNAME
       token: YOUR_TOKEN
+
+  template:
+    paymentInternalCreditURL: http://localhost:8881/gassman-payment-service/internal-credit/make/payment?%s
